--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <h1>Hello Angular</h1>
 
-<p>{{title}}</p>
+<!-- <p>{{title}}</p>
 <p>{{number - 5}}</p>
 <p>{{array}}</p>
 <p>{{obj.a}}</p>
-<p>{{obj.c.d }}</p>
+<p>{{obj.c.d }}</p> -->
 
 <hr>
 <app-post></app-post>
