--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>Hello Angular</h1>
+<input type="text" (keyup)="onInput($event)">
+<p><strong>{{inputValue}}</strong></p>
+
+<button (click)="onClick()">Click me</button>
 
 <!-- <p>{{title}}</p>
 <p>{{number - 5}}</p>
@@ -16,4 +20,6 @@
 
 <img [src]="angular" alt="">
 <img src="{{angular}}" alt="">
+
+
 
