--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,7 @@
 <div class="post">
-  <h2>Post</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ducimus expedita ea quibusdam provident tenetur odio laborum cupiditate, ab eos voluptas eaque qui minima illum alias at enim ratione architecto.</p>
+  <h2>Hello Post</h2>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, accusamus!</p>
+
+  <img class="small" [src]="angular" alt="">
+  <img class="small" src="{{angular}}" alt="">
 </div>
