--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -1,6 +1,11 @@
 .post {
-  width: 500px;
+  width: 700px;
   border: 1px dashed #ccc;
   padding: 1rem;
   margin-bottom: 1rem;
+}
+
+.small {
+  width: 200px;
+  height: 200px;
 }
