--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,32 @@
 <h1>Hello Angular</h1>
+
 <input type="text" (keyup)="onInput($event)">
 <p><strong>{{inputValue}}</strong></p>
 
-<button (click)="onClick()">Click me</button>
+<hr> <!-- //////////////////////////////////////////// -->
 
-<!-- <p>{{title}}</p>
-<p>{{number - 5}}</p>
-<p>{{array}}</p>
-<p>{{obj.a}}</p>
-<p>{{obj.c.d }}</p> -->
+    <app-part></app-part>
 
-<hr>
-<app-post></app-post>
-<!-- <app-post></app-post> -->
+<hr> <!-- //////////////////////////////////////////// -->
 
-<hr>
+    <app-post></app-post>
 
-<app-part1></app-part1>
+<hr> <!-- //////////////////////////////////////////// -->
 
-<img [src]="angular" alt="">
-<img src="{{angular}}" alt="">
+    <app-ngClassAndStyle></app-ngClassAndStyle>
 
+<hr> <!-- ///////////////////ngIF///////////////////////// -->
 
+    <app-ngIF></app-ngIF>
 
+<hr> <!-- ////////////////////ngSwitch//////////////////////// -->
+
+    <app-ngSwitch></app-ngSwitch>
+
+<hr> <!-- ////////////////////*ngFor//////////////////////// -->    
+ 
+    <app-ngFor></app-ngFor>
+
+<hr> <!-- ////////////////////Pip//////////////////////// -->  
+
+    <app-Pip></app-Pip>
