--- a/src/app/Pip/Pip.component.html
+++ b/src/app/Pip/Pip.component.html
@@ -2,6 +2,6 @@
 
 <strong>{{now | date}}</strong>
 <strong>{{now | date: 'long' }}</strong>
-<strong>{{now | date: 'long'| uppercase }}</strong>
-<strong>{{now | date: 'long' }}</strong>
-<strong>{{now | date: 'long' }}</strong>
+<strong>{{now | date: 'long' | uppercase }}</strong>
+<strong>{{now | date: 'long' | lowercase  }}</strong>
+<strong>{{now | date: 'small' }}</strong>
