--- a/src/app/Pip/Pip.component.html
+++ b/src/app/Pip/Pip.component.html
@@ -1,7 +1,13 @@
 <h1>Pip</h1>
+<ul style="list-style: none;">
+    <li><strong>{{now | date}}</strong></li>
+    <li><strong>{{now | date: 'long' }}</strong></li>
+    <li><strong>{{now | date: 'long' | uppercase }}</strong></li>
+    <li><strong>{{now | date: 'long' | lowercase  }}</strong></li>
+    <li><strong>{{now | date: 'small' }}</strong></li>
+</ul>
+    
 
-<strong>{{now | date}}</strong>
-<strong>{{now | date: 'long' }}</strong>
-<strong>{{now | date: 'long' | uppercase }}</strong>
-<strong>{{now | date: 'long' | lowercase  }}</strong>
-<strong>{{now | date: 'small' }}</strong>
+
+
+
