--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
+.container {
+  width: 1140px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+
 .red {
     background: red;
     font-size: 1.5rem;
@@ -40,4 +47,8 @@ section {
   display: flex;
   justify-content: center;
   width: 120px;
+}
+
+button {
+  padding: 15px 15px;
 }
