--- a/src/app/ngIF/ngIF.component.scss
+++ b/src/app/ngIF/ngIF.component.scss
@@ -1,11 +1,13 @@
 .red {
-    background: red;
     font-size: 1.5rem;
-    color:#fff;
+    color:red;
 }
 
 .black {
-    background: black;
     font-size: 2rem;
-    color:#fff;
+    color:black;
+}
+
+button {
+    margin: 15px 15px;
 }
