--- a/src/app/ngSwitch/ngSwitch.component.html
+++ b/src/app/ngSwitch/ngSwitch.component.html
@@ -1,7 +1,7 @@
 <h1>*ngSwitch</h1>
 
-<button (click)="toggle = !toggle">Toggle_Color</button>
-<button (click)="toggle = 2">Toggle default</button>
+<button mat-raised-button color="primary" (click)="toggle = !toggle">Toggle_Color</button>
+<button mat-raised-button color="primary" (click)="toggle = 2">Toggle default</button>
 
 <div [ngSwitch]="toggle">
   <p *ngSwitchCase="true" class="red">Lorem, ipsum.</p>
