--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,52 +1,53 @@
 <div class="container">
   <h1>Hello Angular</h1>
 
-<input type="text" (keyup)="onInput($event)">
-<p><strong>{{inputValue}}</strong></p>
+  <input type="text" (keyup)="onInput($event)" />
+  <p>
+    <strong>{{ inputValue }}</strong>
+  </p>
 
-<hr> <!-- //////////////////////////////////////////// -->
+  <hr />
+  <!-- //////////////////////////////////////////// -->
 
-    <app-part></app-part>
+  <app-part></app-part>
 
-<hr> <!-- //////////////////////////////////////////// -->
+  <hr />
+  <!-- //////////////////////////////////////////// -->
 
-    <app-post></app-post>
+  <app-post></app-post>
 
-<hr> <!-- //////////////////////////////////////////// -->
+  <hr />
+  <!-- //////////////////////////////////////////// -->
 
-    <app-ngClassAndStyle></app-ngClassAndStyle>
+  <app-ngClassAndStyle></app-ngClassAndStyle>
 
-<hr> <!-- ///////////////////ngIF///////////////////////// -->
+  <hr />
+  <!-- ///////////////////ngIF///////////////////////// -->
 
-    <app-ngIF></app-ngIF>
+  <app-ngIF></app-ngIF>
 
-<hr> <!-- ////////////////////ngSwitch//////////////////////// -->
+  <hr />
+  <!-- ////////////////////ngSwitch//////////////////////// -->
 
-    <app-ngSwitch></app-ngSwitch>
+  <app-ngSwitch></app-ngSwitch>
 
-<hr> <!-- ////////////////////*ngFor//////////////////////// -->
+  <hr />
+  <!-- ////////////////////*ngFor//////////////////////// -->
 
-    <app-ngFor></app-ngFor>
+  <app-ngFor></app-ngFor>
 
-<hr> <!-- ////////////////////Pip//////////////////////// -->
+  <hr />
+  <!-- ////////////////////Pip//////////////////////// -->
 
-    <app-Pip></app-Pip>
+  <app-Pip></app-Pip>
 
-<hr> <!-- //////////////////////////////////////////// -->    
-    
-    <app-users></app-users>
+  <hr />
+  <!-- //////////////////////////////////////////// -->
 
-<hr> <!-- //////////////////////////////////////////// --> 
-  
+  <app-users></app-users>
 
-<!-- <mat-form-field appearance="fill">
-    <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-</mat-form-field> -->
+  <hr />
+  <!-- //////////////////Datepicker//////////////////// -->
 
-
-
-
+  <app-datepicker></app-datepicker>
 </div>
