--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,4 +50,22 @@
   <!-- //////////////////Datepicker//////////////////// -->
 
   <app-datepicker></app-datepicker>
+
+  <hr />
+  <!-- //////////////////Service//////////////////// -->
+
+  <div>
+    <h2>Service</h2>
+    
+    <h3>Counter: {{count.counter}}</h3>
+    <button mat-raised-button color="primary" class="btn" (click)="count.increase()">+</button>
+    <button mat-raised-button color="primary" class="btn" (click)="count.decrease()">-</button>
+
+    <h3>Local Counter: {{localCounter.counter}}</h3>
+    <button mat-raised-button color="primary" class="btn" (click)="localCounter.increase()">+</button>
+    <button mat-raised-button color="primary" class="btn" (click)="localCounter.decrease()">-</button>
+
+    <app-service-modul></app-service-modul>
+
+  </div>
 </div>
