--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,7 +1,4 @@
 <div class="post">
-  <h2>Hello Post</h2>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio, accusamus!</p>
-
-  <img class="small" [src]="angular" alt="">
-  <img class="small" src="{{angular}}" alt="">
+  <h2>{{ myData.title }}</h2>
+  <p>{{ myData.text }}</p>
 </div>
