--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
 
   <hr />
   <!-- //////////////////////////////////////////// -->
-
-  <app-post></app-post>
+  <app-post-form (addNewPost)="updatePosts($event)"></app-post-form>
+  <app-post *ngFor="let data of posts" [myData]="data"></app-post>
 
   <hr />
   <!-- //////////////////////////////////////////// -->
