--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,7 +76,7 @@ $AngularComponents-theme: mat-light-theme((
 // that you are using.
 @include angular-material-theme($AngularComponents-theme);
 
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+/* @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 * {
   box-sizing: border-box;
@@ -159,3 +159,4 @@ hr {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+ */
