--- a/src/app/form-validate/form-validate.component.html
+++ b/src/app/form-validate/form-validate.component.html
@@ -5,13 +5,36 @@
     <div class="form-control">
       <label>Email</label>
       <input type="text" placeholder="Email" formControlName="email" />
-      <div class="validation"></div>
+
+      <pre>{{ form.get("email") | json }}</pre>
+
+      <div *ngIf="form.get('email') && form.get('email')" class="validation">
+        <small *ngIf="form.get('email')">
+          Поле email не может быть пустым
+        </small>
+
+        <small *ngIf="form.get('email')"> Введите корректный email </small>
+      </div>
     </div>
 
     <div class="form-control">
       <label>Пароль</label>
       <input type="password" placeholder="Пароль" formControlName="password" />
-      <div class="validation"></div>
+
+      <div
+        *ngIf="form.get('password') && form.get('password')"
+        class="validation"
+      >
+        <small *ngIf="form.get('password')">
+          Пароль не может быть пустым
+        </small>
+
+        <small *ngIf="form.get('password')">
+          Длинна должна быть не менее
+          {{ form.get("password") }}. Сейчас количество символов
+          {{ form.get("password") }}
+        </small>
+      </div>
     </div>
 
     <div class="card">
@@ -31,23 +54,19 @@
         <input type="text" />
       </div>
 
-      <button mat-raised-button color="primary" class="btn" type="button">
-        Выбрать столицу
-      </button>
+      <button class="btn" type="button">Выбрать столицу</button>
     </div>
 
     <div class="card">
       <h2>Ваши навыки</h2>
-      <button mat-raised-button color="primary" class="btn" type="button">
-        Добавить умение
-      </button>
+      <button class="btn" type="button">Добавить умение</button>
       <div class="form-control">
         <label></label>
         <input type="text" />
       </div>
     </div>
 
-    <button mat-raised-button color="primary" class="btn" type="submit">
+    <button class="btn" type="submit" [disabled]="form.invalid">
       Отправить
     </button>
   </form>
