--- a/src/app/service-modul/service-modul.component.html
+++ b/src/app/service-modul/service-modul.component.html
@@ -1,3 +1,26 @@
-<h3>Counter modul: {{count.counter}}</h3>
-    <button mat-raised-button color="primary" class="btn" (click)="count.increase()">+</button>
-    <button mat-raised-button color="primary" class="btn" (click)="count.decrease()">-</button>
+<h3>Counter modul: {{ count.counter }}</h3>
+<button
+  mat-raised-button
+  color="primary"
+  class="btn"
+  (click)="count.increase()"
+>
+  +
+</button>
+<button
+  mat-raised-button
+  color="primary"
+  class="btn"
+  (click)="count.decrease()"
+>
+  -
+</button>
+
+<button
+  mat-raised-button
+  color="primary"
+  class="btn"
+  (click)="mult.multiplication()"
+>
+  *
+</button>
