--- a/src/app/form-validate/form-validate.component.html
+++ b/src/app/form-validate/form-validate.component.html
@@ -6,14 +6,17 @@
       <label>Email</label>
       <input type="text" placeholder="Email" formControlName="email" />
 
-      <pre>{{ form.get("email") | json }}</pre>
-
-      <div *ngIf="form.get('email') && form.get('email')" class="validation">
-        <small *ngIf="form.get('email')">
+      <div
+        *ngIf="form.get('email')?.invalid && form.get('email')?.touched"
+        class="validation"
+      >
+        <small *ngIf="form.get('email')?.errors?.required">
           Поле email не может быть пустым
         </small>
 
-        <small *ngIf="form.get('email')"> Введите корректный email </small>
+        <small *ngIf="form.get('email')?.errors?.email">
+          Введите корректный email
+        </small>
       </div>
     </div>
 
@@ -22,28 +25,29 @@
       <input type="password" placeholder="Пароль" formControlName="password" />
 
       <div
-        *ngIf="form.get('password') && form.get('password')"
+        *ngIf="form.get('password')?.invalid && form.get('password')?.touched"
         class="validation"
       >
-        <small *ngIf="form.get('password')">
+        <small *ngIf="form.get('password')?.errors?.required">
           Пароль не может быть пустым
         </small>
 
-        <small *ngIf="form.get('password')">
+        <small *ngIf="form.get('password')?.errors?.minlength">
           Длинна должна быть не менее
-          {{ form.get("password") }}. Сейчас количество символов
-          {{ form.get("password") }}
+          {{ form.get("password")?.errors?.minlength?.requiredLength }}
+          символов. Сейчас количество символов
+          {{ form.get("password")?.errors?.minlength?.actualLength }}
         </small>
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" formGroupName="address">
       <h2>Адрес</h2>
 
       <div class="form-control">
         <label>Страна</label>
 
-        <select>
+        <select formControlName="country">
           <option value="ru">Россия</option>
           <option value="ua">Украина</option>
           <option value="by">Беларусь</option>
@@ -51,22 +55,38 @@
       </div>
 
       <div class="form-control">
-        <input type="text" />
+        <input type="text" formControlName="city" placeholder="город" />
       </div>
 
-      <button class="btn" type="button">Выбрать столицу</button>
+      <button
+        mat-raised-button
+        color="primary"
+        class="btn"
+        type="button"
+        (click)="setCapital()"
+      >
+        Выбрать столицу
+      </button>
     </div>
 
     <div class="card">
       <h2>Ваши навыки</h2>
-      <button class="btn" type="button">Добавить умение</button>
+      <button mat-raised-button color="primary" class="btn" type="button">
+        Добавить умение
+      </button>
       <div class="form-control">
         <label></label>
         <input type="text" />
       </div>
     </div>
 
-    <button class="btn" type="submit" [disabled]="form.invalid">
+    <button
+      mat-raised-button
+      color="primary"
+      class="btn"
+      type="submit"
+      [disabled]="form.invalid"
+    >
       Отправить
     </button>
   </form>
