--- a/src/app/post-form/post-form.component.html
+++ b/src/app/post-form/post-form.component.html
@@ -9,7 +9,7 @@
   type="text"
   class="form-control"
   placeholder="Some text"
-  [(ngModel)]="text"
+  [(ngModel)]="body"
 />
 
 <button mat-raised-button color="primary" (click)="createNewPost()">
