add http client

--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,4 +1,8 @@
 <mat-tab-group>
+  <mat-tab label="Http">
+    <app-http></app-http>
+  </mat-tab>
+  
   <mat-tab label="Forms">
     <app-form-validate></app-form-validate>
   </mat-tab>
