--- a/src/app/http/http.component.html
+++ b/src/app/http/http.component.html
@@ -1,28 +1,31 @@
 <div class="container">
-    <h1>Angular HttpClient</h1>
-  
-    <div class="card">
-      <div class="form-control">
-        <input type="text" placeholder="Название">
-      </div>
-      <button class="btn">Добавить</button>
-      <button class="btn">Загрузить</button>
+  <h1>Angular HttpClient</h1>
+
+  <div class="card">
+    <div class="form-control">
+      <input type="text" placeholder="Название" [(ngModel)]="todoTitle" />
     </div>
-  
-    <hr>
-  
+    <button class="btn" (click)="addTodo()">Добавить</button>
+    <button class="btn" (click)="downloadTodo()">Загрузить</button>
+  </div>
+
+  <hr />
+
+  <div *ngIf="!loading; else loadingBlock">
     <div class="card" *ngFor="let todo of todos">
       <p>
-        <span [class.completed]="todo.completed">{{todo.title | titlecase}}</span>
+        <span [class.completed]="todo.completed">{{
+          todo.title | titlecase
+        }}</span>
         <span>
           <button class="btn btn-danger">Удалить</button>
           <button class="btn" [disabled]="todo.completed">Завершить</button>
         </span>
       </p>
     </div>
-  
   </div>
-  
-  
-  
-  
+
+  <ng-template #loadingBlock>
+    <p>Loading...</p>
+  </ng-template>
+</div>
