--- a/src/app/http/http.component.html
+++ b/src/app/http/http.component.html
@@ -12,17 +12,24 @@
   <hr />
 
   <div *ngIf="!loading; else loadingBlock">
-    <div class="card" *ngFor="let todo of todos">
-      <p>
-        <span [class.completed]="todo.completed">{{
-          todo.title | titlecase
-        }}</span>
-        <span>
-          <button class="btn btn-danger">Удалить</button>
-          <button class="btn" [disabled]="todo.completed">Завершить</button>
-        </span>
-      </p>
+    <div *ngIf="todos.length; else noTodos">
+      <div class="card" *ngFor="let todo of todos">
+        <p>
+          <span [class.completed]="todo.completed">{{
+            todo.title | titlecase
+          }}</span>
+          <span>
+            <button class="btn btn-danger" (click)="removeTodo(todo.id)">
+              Удалить
+            </button>
+            <button class="btn" [disabled]="todo.completed">Завершить</button>
+          </span>
+        </p>
+      </div>
     </div>
+    <ng-template #noTodos>
+      <p>No elements</p>
+    </ng-template>
   </div>
 
   <ng-template #loadingBlock>
