--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,54 +1,150 @@
-.container {
-  width: 1140px;
-  margin: 0 auto;
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+* {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.red {
-    background: red;
-    font-size: 1.5rem;
-    color:#fff;
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  line-height: 1.6;
+  background-color: #fff;
+  color: #333;
 }
 
-.black {
-    background: black;
-    font-size: 2rem;
-    color:#fff;
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
-section {
-  display: table;
+a {
+  text-decoration: none;
 }
 
-.example-label {
-  display: table-cell;
-  font-size: 14px;
-  margin-left: 8px;
-  min-width: 120px;
+a:hover {
+  color: #666;
 }
 
-.example-button-row {
-  display: table-cell;
-  width: 490px;
+ul {
+  list-style: none;
 }
 
-.example-button-row .mat-button-base {
-  margin: 8px 8px 8px 0;
+img {
+  width: 100%;
 }
 
-.example-flex-container {
+.btn {
+  display: inline-block;
+  background: #333333;
+  color: #fff;
+  padding: 0.4rem 1.3rem;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  transition: opacity 0.2s ease-in;
+  outline: none;
+
+  &:disabled {
+    background: #ccc;
+    color: #000;
+    cursor: not-allowed;
+  }
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
+.btn.btn-danger {
+  background: #dc3545;
+  color: #fff;
+}
+
+.form-control {
+  display: block;
+  margin-top: 0.3rem;
+  margin-bottom: .5rem;
+
+  label {
+    display: block;
+    font-weight: bold;
+    font-size: 1rem;
+    margin-bottom: .5rem;
+  }
+
+  input {
+    margin-bottom: 0;
+  }
+
+  .validation {
+    color: red;
+  }
+}
+
+.card {
+  padding: 1rem;
+  border: #ccc 1px dotted;
+  margin: 0.7rem 0;
+
+  p {
+    display: flex;
+    justify-content: space-between;
+
+    span.completed {
+      text-decoration: line-through;
+    }
+  }
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+input,
+select,
+textarea {
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
+  margin-bottom: 1rem;
+}
+
+hr {
+  margin: .5rem 0;
+}
+
+.navbar {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
-}
+  align-items: center;
+  padding: 0.7rem 2rem;
+  z-index: 1;
+  width: 100%;
+  opacity: 0.9;
+  margin-bottom: 1rem;
+  background: #dc3545;
+  color: #fff;
 
-.example-button-container {
-  display: flex;
-  justify-content: center;
-  width: 120px;
-}
+  ul {
+    display: flex;
+    
+    li.active a {
+      font-weight: bold;
+      color: #333333;
+      cursor: default;
+    }
+  }
 
-button {
- margin: 5px 5px;
+  a {
+    color: #fff;
+    padding: 0.45rem;
+    margin: 0 0.25rem;
+  }
 }
-
