--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,15 @@
     <a [routerLink]="['/']">Angular Routing</a>
   </h1>
   <ul>
-    <li class="active">
+    <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
       <a [routerLink]="['/']">Home</a>
     </li>
-    <li><a routerLink="/form">Form</a></li>
-    <li><a [routerLink]="['/postForm']">Post Form</a></li>
+    <li routerLinkActive="active">
+      <a routerLink="/form">Form</a>
+    </li>
+    <li routerLinkActive="active">
+      <a [routerLink]="['/postForm']">Post Form</a>
+    </li>
     <li><button class="btn">Login</button></li>
     <li><button class="btn">Logout</button></li>
   </ul>
@@ -18,6 +22,9 @@
     <h1>Hello Angular</h1>
       <router-outlet></router-outlet>
   <!-- <app-tabs></app-tabs> -->
+  <div>
+    <button class="btn" (click)="goToForm()">Go to form</button>
+  </div> 
   </div>
 </div>
 
