--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,36 +1,4 @@
 <mat-tab-group>
-  <mat-tab label="Http">
-    <app-http></app-http>
-  </mat-tab>
-
-  <mat-tab label="Forms">
-    <app-form-validate></app-form-validate>
-  </mat-tab>
-
-  <mat-tab label="Part">
-    <app-part></app-part>
-  </mat-tab>
-
-  <mat-tab label="ClassAndStyle">
-    <app-ngClassAndStyle></app-ngClassAndStyle>
-  </mat-tab>
-
-  <mat-tab label="ngIF">
-    <app-ngIF></app-ngIF>
-  </mat-tab>
-
-  <mat-tab label="ngSwitch">
-    <app-ngSwitch></app-ngSwitch>
-  </mat-tab>
-
-  <mat-tab label="ngFor">
-    <app-ngFor></app-ngFor>
-  </mat-tab>
-
-  <mat-tab label="Pip">
-    <app-Pip></app-Pip>
-  </mat-tab>
-
   <mat-tab label="Users">
     <app-users></app-users>
   </mat-tab>
@@ -46,6 +14,7 @@
     ></app-switch>
     <p>AppState: {{ appState }}</p>
   </mat-tab>
+
   <mat-tab label="Posts">
     <app-post-form (addNewPost)="updatePost($event)"></app-post-form>
 
@@ -66,7 +35,7 @@
   <mat-tab label="Secvice">
     <div>
       <h2>Service</h2>
-  
+
       <h3>Counter: {{ count.counter }}</h3>
       <button
         mat-raised-button
@@ -84,7 +53,7 @@
       >
         -
       </button>
-  
+
       <h3>Local Counter: {{ localCounter.counter }}</h3>
       <button
         mat-raised-button
@@ -102,8 +71,15 @@
       >
         -
       </button>
-  
+
       <app-service-modul></app-service-modul>
     </div>
+  </mat-tab>
+
+  <mat-tab label="Input Value">
+    <input type="text" (keyup)="onInput($event)" />
+    <p>
+      <strong>{{ inputValue }}</strong>
+    </p>
   </mat-tab>
 </mat-tab-group>
